# JsonParser

./: CMakeLists.txt
include/: json_parser.h  lex_defs.h  read_token.h
src/: get_token.c  lexer.c  main.c  parse_array.c  parse_element.c  parse_object.c
